--- a/CustomizedDesign.html
+++ b/CustomizedDesign.html
@@ -110,8 +110,10 @@
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
                         <li><a href="#" class="vMenu--active" >Customized Design</a></li>
+						<li><a href="DesignTrend.html" >Design Trends</a></li>
 
-                        <li><a href="DesignThinking.html" >Design Thinking</a></li>
+
+						<li><a href="DesignThinking.html" >Design Thinking</a></li>
 						<li><a href="DesignProcess.html" >Design Process</a></li>
 
 					</ul>
