--- a/DesignThinking.html
+++ b/DesignThinking.html
@@ -110,6 +110,7 @@
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
 						<li><a href="CustomizedDesign.html" >Customized Design</a></li>
+						<li><a href="DesignTrend.html" >Design Trends</a></li>
 						<li><a href="DesignThinking.html" class="vMenu--active"  >Design Thinking</a></li>
 						<li><a href="DesignProcess.html" >Design Process</a></li>
 
