--- a/Pianooooo.html
+++ b/Pianooooo.html
@@ -123,7 +123,7 @@
 				</div>
 				<div class="app__main">
 					<div class="text-container">
-						<h1 class="app__main__title" id="1">Pianooooo</h1>
+						<h1 class="app__main__title" id="1">Pianooooo: Piano Sharing</h1>
 						<P>Service & UX Design / Independent Work</P>
 						<h3>Project Brief</h3>
 						<P>Pianooooo is a service design that have different functions and can be applied in different areas. Users can play the piano by scanning the QR code. Those who cannot play the piano can also try to play it like a game. Others can buy food, drink and related souvenirs as well as taking a rest at Pianooooo. After playing the piano, users who are interested in Pianooooo can purchase online courses and piano tickets via the App.
