--- a/DesignProcess.html
+++ b/DesignProcess.html
@@ -110,7 +110,7 @@
 				<div class="app__menu">
 					<ul class="vMenu" style="position: fixed">
 						<li><a href="CustomizedDesign.html" >Customized Design</a></li>
-
+						<li><a href="DesignTrend.html" >Design Trends</a></li>
 						<li><a href="DesignThinking.html" >Design Thinking</a></li>
 						<li><a href="#" class="vMenu--active"  >Design Process</a></li>
 
