--- a/IBM.html
+++ b/IBM.html
@@ -196,8 +196,9 @@
 						- It's important to learn how to communicate with and persuade others. </P>
 
 						<h3 id="1">RPA</h3>
-						<P>RPA is a robot management platform. I designed several interfaces cooperating with senior designers and made a hi-fi prototype by using invison and principle.</P>
+						<P>RPA is a robot management platform. I designed several interfaces cooperating with senior designers and made a hi-fi prototype by using Invison and principle.</P>
 						<img  src="images/IBM/9.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
+						<P>I made several simple prototypes to test the interaction process of the ROI Calculator and found slider, rather than text field, scrollbar or pie chart, was a better choice.</P>
 						<img class="img" src="images/IBM/12.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 						<img  src="images/IBM/11.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 
