--- a/EZChat.html
+++ b/EZChat.html
@@ -248,7 +248,7 @@
 						<img  src="images/EZChat/33.jpg" style="box-shadow: 0px 0px 20px #c0c0c0">
 						<iframe width="100%" height="350" src="https://www.youtube.com/embed/LxDx5P5zDVo" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 						<h4>What did I learn from programming?</h4>
-						<P>1. Default settings are often better and time-saving. Just refer to default settings!<br>
+						<P>1. Default settings are often better and time-saving. If don't have a specific reason, just refer to default settings!<br>
 						2. Sometimes we have to make a balance between design and technical difficulty.</P>
 
 
