--- a/IBM.html
+++ b/IBM.html
@@ -170,11 +170,11 @@
 						<br>Check and manipulate the Asset Index;<br>
 						Manage the Data Set;<br>
 						Check Data Quality.<br><br>
-						Since they are not closely related, I decided to put them on the sidebar(which can be hidden) as three major tabs in Data Asset Management.</P>
+						Since they are not closely related, I decided to put them in a hamburger navigation as three major tabs in Data Asset Management.</P>
 
 						<h4>Asset Index</h4>
 						<P>The tree index clearly shows the hierarchy of categories and terms, allowing users to find a category/term manually. There's also a global search bar
-							to help them search by keywords or status. Because of the limited space, I designed a sidebar (Event tab) to show
+							to help them search by keywords or status. Because of the limited space, I designed a navigation drawer (Event tab) to show
 							notifications when the data updates.</P>
 
 						<img class="img" src="images/IBM/EDPA_New/1.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
@@ -196,7 +196,7 @@
 						- It's important to learn how to communicate with and persuade others. </P>
 
 						<h3 id="1">RPA</h3>
-						<P>RPA is a robot management platform. I designed several interfaces cooperating with senior designers and made a hi-fi prototype by using Invison and principle.</P>
+						<P>RPA is a robot management platform. I designed several interfaces collaborating with senior designers and made a hi-fi prototype by using Invison and principle.</P>
 						<img  src="images/IBM/9.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
 						<P>I made several simple prototypes to test the interaction process of the ROI Calculator and found slider, rather than text field, scrollbar or pie chart, was a better choice.</P>
 						<img class="img" src="images/IBM/12.jpg" style=" box-shadow: 0px 0px 20px #c0c0c0; margin-top: 10px ">
