--- a/DesignTrend.html
+++ b/DesignTrend.html
@@ -142,8 +142,8 @@
 						<h3>Faster Animation</h3>
 						<P>Animations are primarily used to create connections between different pages. Therefore, as we are becoming more and more familiar with Apps, the transition time need to be reduced. </P>
 
-						<h3>Vibration Feedback</h3>
-						<P>A good example is Transit - it provides suitable vibration feedback in many different interactions.</P>
+						<h3>Vibration (Haptic) Feedback</h3>
+						<P>Vibration feedback could make the interaction process more precise and satisfying. A good example is Transit - it provides suitable vibration feedback for many different interactions.</P>
 						<img src="images/Design%20Philosophy/10.png" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
 
 						<h3>More gestures</h3>
