--- a/IBM.html
+++ b/IBM.html
@@ -173,7 +173,7 @@
 						Since they are not closely related, I decided to put them in a hamburger navigation as three major tabs in Data Asset Management.</P>
 
 						<h4>Asset Index</h4>
-						<P>The tree index clearly shows the hierarchy of categories and terms, allowing users to find a category/term manually. There's also a global search bar
+						<P>The tree view clearly shows the hierarchy of categories and terms, allowing users to find a category/term manually. There's also a global search bar
 							to help them search by keywords or status. Because of the limited space, I designed a navigation drawer (Event tab) to show
 							notifications when the data updates.</P>
 
