--- a/CustomizedDesign.html
+++ b/CustomizedDesign.html
@@ -156,7 +156,7 @@
 							The various options has to be hidden, in order to reduce the complexity of interfaces and to avoid the redundancy of functions.For example, Facebook asks "is this shortcut relevant to you?" only when users long-press a tab, which isn't a common behavior. Most of the apps use a Settings tab to show (or hide) all the options.
 						</P>
 						<img src="images/Design%20Philosophy/5.jpeg" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
-						<P align="center" style="color: #909090; margin-top: 5px">The best way to do this is to integrate all the options into Settings tab!</P>
+						<P align="center" style="color: #909090; margin-top: 5px">A good way is to integrate all the options into Settings tab!</P>
 
 
 						<h3>Benefits</h3>
