--- a/DesignProcess.html
+++ b/DesignProcess.html
@@ -118,9 +118,9 @@
 				</div>
 				<div class="app__main">
 					<div class="text-container">
-						<h1 class="app__main__title">Design Process</h1>
+						<h1 class="app__main__title">Design Process: Design Bridge</h1>
 						<P>Instead of the design methods, designers should focus on the logic of their design in a whole design process.
-						 Design Bridge is a method ("created" by myself) to connect designers' research and their design. It's a better way to directly express the findings in the research and how these findings could shape the design.
+							<b>Design Bridge</b> is a method ("created" by myself) to connect designers' research and their design. It's a better way to directly express the findings in the research and how these findings could shape the design.
 							As the name suggests, it's like a bridge, connecting the research and the design in a whole process.
 						</P>
 						<img src="./images/Design%20Bridge.jpg" width="90%" >
