--- a/EZChat.html
+++ b/EZChat.html
@@ -170,8 +170,8 @@
 						<h3 id="6">Strong Ties and Weak Ties</h3>
 						<P>Social media brings us weak ties <i>(Mark Granovetter, 1973)</i> - those who are not familiar with us also can be our "friends" on social media.<br><br>
 						According to strong and weak ties, social media platforms can be classified into two groups:<br>
-						Some emphasize strong ties: Messenger, WeChat, WhatsApp, ... These Apps are more like chatting tools, using "Chats" as homepages.<br>
-						The others emphasize weak ties, or try to make balance between strong and weak ties. These Apps tend to use "Posts" or "Stories" as homepages.</P>
+						Some emphasize on strong ties: Messenger, WeChat, WhatsApp, ... These Apps are more like chatting tools, using "Chats" as homepages.<br>
+						The others emphasize on weak ties, or try to make balance between strong and weak ties. These Apps tend to use "Posts" or "Stories" as homepages.</P>
 
 						<h3>Competitive Analysis</h3>
 						<p>How do these popular social media design their App and why?</p>
@@ -227,7 +227,7 @@
 						<img src="images/EZChat/setRelationship.gif">
 
 						<h4>Higher Cell</h4>
-						<P>Less content and less anxiety on the homepage.</P>
+						<P>Less content, more negative space and less anxiety on the homepage.</P>
 						<img src="images/EZChat/18.png" style="width: 40%; margin-left: 30%; box-shadow: 0px 0px 20px #c0c0c0">
 
 						<h4>Anonymous Like</h4>
