--- a/DesignTrend.html
+++ b/DesignTrend.html
@@ -120,8 +120,8 @@
 				</div>
 				<div class="app__main">
 					<div class="text-container">
-						<h1 class="app__main__title">The 6 Trends in Product Design</h1>
-						<P>Below are the 6 trends from my perspective in product design.</P>
+						<h1 class="app__main__title">The 7 Trends in Product Design</h1>
+						<P>Below are the 7 trends from my perspective in product design.</P>
 						<h3>Customized Design</h3>
 						<P>Different users have different preferences. Besides, the concept of modular programming is widely applied in industry.
 							Here comes Customized Design - modularize different functions and let users to decide what they need.<br>
@@ -148,6 +148,11 @@
 
 						<h3>More gestures</h3>
 						<P>A good way to design gestures is to ask a question: <b>What do users wanna do when moving their fingers like this?</b></P>
+
+						<h3>Lower search area</h3>
+						<P>A search bar in the middle of the screen could provide better user experience, especially for one-handed operation.</P>
+						<img src="images/Design%20Philosophy/11.jpg" style="width: 40%; margin-left: 5%; box-shadow: 0px 0px 20px #c0c0c0; float: left">
+						<img src="images/Design%20Philosophy/12.jpg" style="width: 40%; margin-left: 10%; box-shadow: 0px 0px 20px #c0c0c0">
 
 
 
