--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     <!-- Don't forget to add your metadata here -->
     <link rel='stylesheet' href='css/style.min.css' />
     <style>
+        .alink{
+            background-color: lightblue;
+            text-decoration: underline;
+            transition: .2s;
+        }
+        .alink:hover{
+            background-color:rgba(108, 99, 255, 0.3);
+
+        }
         .shadow{
 
             transition: all .1s;
@@ -124,8 +133,11 @@
         <div class="expanded__inner">
             <div class="expanded__content">
                 <h1 style="margin-top: 100px; font-size: 50px;   color: #303030; letter-spacing: .5px"><b>Hi, I'm William.</b> I design (almost) everything.</h1>
-                <p style="font-size: 20px; font-weight: lighter; letter-spacing: .2px">I'm passionate about creating great products by combining ux, business and technology. You can view my <a href="CustomizedDesign.html"><b style="text-decoration: underline">design philosophy</b></a>, find me on <a href="https://www.linkedin.com/in/william-jin-405929168/" target="_blank"><b style="text-decoration: underline">Linkedin</b></a>, or
-                    just send me an <a href="mailto:qiuj@andrew.cmu.edu"><b style="text-decoration: underline">email</b></a>.</p>
+                <p style="font-size: 20px; font-weight: lighter; letter-spacing: .2px">I'm passionate about creating great products by combining ux, business and technology.
+                    You can view my <a href="CustomizedDesign.html" class="alink"><b>design philosophy</b></a>,
+                    find me on <a href="https://www.linkedin.com/in/qiu-william-jin-405929168/" target="_blank" class="alink"><b>Linkedin</b></a>,
+                    or
+                    just send me an <a target="_blank" href="mailto:qiuj@andrew.cmu.edu" class="alink" ><b>email</b></a>.</p>
                 <a target="_blank" href="./pdfs/resume.pdf" class="resume button button__primary" style="letter-spacing: 1px">My Resume</a><br>
             </div>
         </div>
