--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         .alink{
             background-color: lightblue;
             text-decoration: underline;
-            transition: .2s;
+            transition: .5s;
         }
         .alink:hover{
             background-color:rgba(108, 99, 255, 0.3);
@@ -187,17 +187,14 @@
         <div class="steps__inner">
 
             <div class="step">
-
-                <a href="Uteeth.html">
+                <a href="12306.html">
                     <div class="step__media">
-
-                        <img src="./images/Uteeth/0.0.jpg" width="90%" class="shadow" >
+                        <img src="./images/12306/AppleDevices2.jpg" width="90%" class="shadow" >
                     </div>
                 </a>
-                <h4>Uteeth</h4>
-                <p >Product & UX Design / Independent Project</p>
-
-
+                <h4>Design Challenge:<br>
+                    Redesign of 12306.cn & its App in 1 Day</h4>
+                <p >UI/UX Design / Independent Project</p>
             </div>
 
             <div class="step">
@@ -210,6 +207,7 @@
                 <p >Service & UX Design / Independent Project</p>
             </div>
         </div></div></div>
+<!--
 <div class="steps landing__section" >
 
     <div class="container">
@@ -238,6 +236,7 @@
         </div>
     </div>
 </div>
+-->
 <div class="footer footer--dark">
     <div class="container">
         <div class="footer__inner">
