--- a/index.html
+++ b/index.html
@@ -8,13 +8,18 @@
     <link rel='stylesheet' href='css/style.min.css' />
     <style>
         .alink{
-            background-color: lightblue;
+
             text-decoration: underline;
-            transition: .5s;
+            transition: .3s;
+
+
         }
         .alink:hover{
             background-color:rgba(108, 99, 255, 0.3);
 
+        }
+        .alink:active{
+            background-color:rgba(108, 99, 255, 1);
         }
         .shadow{
 
@@ -34,6 +39,10 @@
             -webkit-box-shadow: 0px 10px 50px 1px rgba(108, 99, 255, 0.3);
             -moz-box-shadow: 0px 10px 50px 1px rgba(108, 99, 255, 0.3);
             box-shadow: 0px 10px 50px 1px rgba(108, 99, 255, 0.3);
+        }
+        .resume:active{
+            background-color: #362CCF;
+
         }
         .overlay{
             position: absolute;
@@ -134,10 +143,10 @@
             <div class="expanded__content">
                 <h1 style="margin-top: 100px; font-size: 50px;   color: #303030; letter-spacing: .5px"><b>Hi, I'm William.</b> I design (almost) everything.</h1>
                 <p style="font-size: 20px; font-weight: lighter; letter-spacing: .2px">I'm passionate about creating great products by combining ux, business and technology.
-                    You can view my <a href="CustomizedDesign.html" class="alink"><b>design philosophy</b></a>,
+                    You can view my <a href="CustomizedDesign.html" class="alink"><b>Design Philosophy</b></a>,
                     find me on <a href="https://www.linkedin.com/in/qiu-william-jin-405929168/" target="_blank" class="alink"><b>Linkedin</b></a>,
                     or
-                    just send me an <a target="_blank" href="mailto:qiuj@andrew.cmu.edu" class="alink" ><b>email</b></a>.</p>
+                    just send me an <a target="_blank" href="mailto:qiuj@andrew.cmu.edu" class="alink" ><b>Email</b></a>.</p>
                 <a target="_blank" href="./pdfs/resume.pdf" class="resume button button__primary" style="letter-spacing: 1px">My Resume</a><br>
             </div>
         </div>
@@ -207,7 +216,7 @@
                 <p >Service & UX Design / Independent Project</p>
             </div>
         </div></div></div>
-<!--
+
 <div class="steps landing__section" >
 
     <div class="container">
@@ -224,19 +233,18 @@
                 <p >Interaction Design / Independent Project</p>
             </div>
             <div class="step">
-                <a href="12306.html">
+                <a href="Uteeth.html">
                 <div class="step__media">
-                    <img src="./images/12306/AppleDevices2.jpg" width="90%" class="shadow" >
+                    <img src="./images/Uteeth/0.0.jpg" width="90%" class="shadow" >
                 </div>
                 </a>
-                <h4>Design Challenge:<br>
-                    Redesign of 12306.cn & its App in 1 Day</h4>
-                <p >UI/UX Design / Independent Project</p>
+                <h4>Uteeth</h4>
+                <p >Product Design / Independent Project</p>
             </div>
         </div>
     </div>
 </div>
--->
+
 <div class="footer footer--dark">
     <div class="container">
         <div class="footer__inner">
