--- a/Pianooooo.html
+++ b/Pianooooo.html
@@ -107,7 +107,7 @@
 			</div>
 		</div>
 	</div>
-	<div style="background-color: #6c63ff; height: 70px"></div>
+	<div style="background-color: #D990A6; height: 70px"></div>
 	<!-- Page content -->
 	<div class="app">
 		<div class="container">
