--- a/EZChat.html
+++ b/EZChat.html
@@ -134,7 +134,7 @@
 			</div>
 		</div>
 	</div>
-	<div style="background-color: #6c63ff; height: 70px"></div>
+	<div style="background-color: #61C28A; height: 70px"></div>
 	<!-- Page content -->
 	<div class="app">
 		<div class="container">
