--- a/IBM.html
+++ b/IBM.html
@@ -135,7 +135,7 @@
 			</div>
 		</div>
 	</div>
-	<div style="background-color: #6c63ff; height: 70px"></div>
+	<div style="background-color: #4796E1; height: 70px"></div>
 	<!-- Page content -->
 	<div class="app">
 		<div class="container">
