--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
                     <p class="expanded__text">A queue-based news app for commuting people.
                         </div>
                 <div class="expanded__media">
-
+<a href="Quenews.html">
                     <img class="landing_img" src="./images/Quenews/0.png" width="60%" >
-
+</a>
                 </div>
             </div>
         </div>
