--- a/Quenews.html
+++ b/Quenews.html
@@ -203,6 +203,7 @@
 
 <div class="landing_middle">
         <h1 class="middle_title">Problems</h1>
+    <h3>Commuters love listening to the news.</h3>
         <p class="larger_text">"I don't want to / it's not easy for me to take out my cell phone when commuting."<br><br>
             "I wanna send emails or browse social media while listening to the news.
             <br>It's inconvenient to switch
@@ -220,70 +221,24 @@
                 <div class="expanded__content">
                     <h1 class="expanded__title" >Solutions</h1>
 
-                    <p class="larger_text">- Queue:
-                    <br>
-                    Recommendation
+                    <h3 >Queue</h3>
+                    <p>Commuters can easily add a piece of news to their queue.
+                        In doing so, they don't have to frequently take out their cell phones or switch between apps, or to worry about WiFi. The
+                         only thing is to add several pieces of news to the queue, and then enjoy the journey!
+                        <h3>Recommendation</h3>
+                    <P>The recommendation algorithm is also based on the queue. Commuters can add a new piece of news to their queues according to their listening history.
+                     Also, if the current queue is finished, the system will automatically choose a piece of news to play.</P>
+                    <h3>A never-ending listening experience</h3>
+                    <P>Quenews can provide a never-ending listening experience to its users - they can enjoy the news the like whenever
+                    they open the app.</P>
                 </div>
                 <div class="expanded__media">
-                    <img class="landing_img" src="./images/EZChat/1.jpg" >
+                    <img src="./images/Quenews/0.png" width="70%" >
                 </div>
             </div>
         </div>
 </div>
-<div class="expanded landing__section" style="background-image: linear-gradient(to bottom right, #4796E1, #225DC0); ">
-    <div class="container">
 
-            <div class="expanded__inner">
-
-
-                <div class="expanded__content">
-                    <h1 class="expanded__title" style="color: #ffffff;">App Design</h1>
-                    <P class="subtitle" style="color: rgba(255,255,255,.5);">Feb - Jun 2019</P>
-                    <p class="expanded__text" style="color: #ffffff;">Several projects during my internship in IBM.</div>
-                <div class="expanded__media">
-                    <a href="IBM.html">
-                    <img class = 'landing_img' src="./images/IBM/0.png" width="80%" >
-                    </a>
-                </div>
-
-            </div>
-
-    </div>
-</div>
-<div class="expanded landing__section" <!--style="background-image: linear-gradient(to bottom right, #94D9B3, #22BA70) "-->>
-    <div class="container">
-        <div class="expanded__inner">
-
-            <div class="expanded__content">
-                <h1 class="expanded__title">EZChat</h1>
-                <P class="subtitle">Independent Project, 2018 - 2019</P>
-                <p class="expanded__text">A relation-based chatting tool for People
-                    who value boundaries in their interpersonal relationships.</div>
-            <div class="expanded__media">
-                <a href="EZChat.html">
-                <img class="landing_img" src="./images/EZChat/0.png" width="60%" >
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="expanded landing__section" style="background-image: url('images/Pianooooo/0.jpg');
--webkit-background-size:cover ;">
-    <div class="container">
-        <div class="expanded__inner">
-
-            <div class="expanded__content">
-                <h1 class="expanded__title">Pianooooo</h1>
-                <P class="subtitle">Independent Project, 2017</P>
-                <p class="expanded__text">A piano-sharing business model.</div>
-            <div class="expanded__media">
-                <a href="Pianooooo.html">
-                    <img class="landing_img" src="./images/Pianooooo/phone.png" width="60%" style="opacity: .9" >
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
 
 
 
