--- a/Quenews.html
+++ b/Quenews.html
@@ -188,7 +188,7 @@
                     <b style="color: #5654CD">Quenews</b> is a queue-based news app for commuters.</h1>
                 <p class="subtitle">Inspired by the pain points of commuters, my friend Erin and me designed Quenews together.<br>
                 My role: solution, UI design, prototyping.</P>
-                <img src="images/Quenews/logo.png" width="20%">
+                <img src="images/Quenews/Logo.png" width="20%">
                 </div>
         </div>
     </div>
@@ -238,10 +238,62 @@
             </div>
         </div>
 </div>
+<div class="expanded landing__section">
+    <div class="container">
+        <div class="expanded__inner">
+
+            <div class="expanded__content">
+                <h1 class="expanded__title" >Discover Page</h1>
+
+                <h3 >Play Now/Add to Top/Add to Bottom</h3>
+                <p>
+                    Users can browse news at Discover Page and add them to the queue.
+                    They have three choices - play it now, and add it to the top/bottom of the queue.
+                    The three major actions are represented by a play button and two arrow buttons respectively.
+                </p>
+                <h3>Play Progress</h3>
+                <P>
+                    The current time/total time of a piece of news are represented on the slider.
+                </P>
+            </div>
+            <div class="expanded__media">
+                <img src="./images/Quenews/Discover_Mockup.png" width="70%" >
+            </div>
+        </div>
+    </div>
+</div>
+<div class="expanded landing__section" style="background-color: #ffffff">
+    <div class="container">
+        <div class="expanded__inner">
+
+            <div class="expanded__content">
+                <h1 class="expanded__title" >Card View: Better for commuters</h1>
+
+                <h3 >Cards & Gestures</h3>
+                <p>
+                    Sometimes it's difficult for commuters to interact precisely with the app
+                    (e.g. when they are walking or on a bus). Thus, we added a card view as well as some gestures to better illustrate the information
+                    and refine the interaction. They can tap the play button to play it now, swipe up/down to add it to the top/bottom of the queue,
+                    and swipe left/right to switch between different news.
+                </p>
+            </div>
+            <div class="expanded__media">
+                <img src="./images/Quenews/Discover_Card_Mockup.png" width="70%" >
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
 
+
+<div class="landing_middle">
+    <h1 class="middle_title">Wanna learn more about our design process?</h1>
+    <a target="_blank" class="resume button button__primary" style="letter-spacing: 1px">Learn more</a><br>
+
+
+</div>
 <div class="footer footer--dark">
     <div class="container">
         <div class="footer__inner">
