--- a/Quenews.html
+++ b/Quenews.html
@@ -204,13 +204,13 @@
 <div class="landing_middle">
         <h1 class="middle_title">Problems</h1>
     <h3>Commuters love listening to the news.</h3>
-        <p class="larger_text">"I don't want to / it's not easy for me to take out my cell phone when commuting."<br><br>
+        <h4 ><i>"I don't want to / it's not easy for me to take out my cell phone when commuting."<br><br>
             "I wanna send emails or browse social media while listening to the news.
             <br>It's inconvenient to switch
             between the news app and other apps. "<br><br>
         "There's no WiFi when commuting."<br><br>
         "I wanted to know different media's perspectives about a piece of news."<br><br>
-        "I only listen to sports news."</p>
+            "I only listen to sports news."</i></h4>
 
 </div>
 
@@ -283,12 +283,79 @@
         </div>
     </div>
 </div>
+<div class="expanded landing__section" >
+    <div class="container">
+        <div class="expanded__inner">
+
+            <div class="expanded__content">
+                <h1 class="expanded__title" >Article</h1>
+
+
+                <p style="width: 65%">
+                    Users can view the article of a piece of news. For commuters, viewing articles is a less-used function, which is why we
+                    used a modal window to show the articles as a temporary status.</p>
+
+                <h3>Feedback</h3>
+                <p style="width: 65%">
+                    We also made a balance between the forms of feedback. For one thing, user's feedback about an article could be
+                    useful for data analysis and recommendation. On the other hand, however, more and more news app tend to close their comment function
+                    to avoid extreme opinions. Therefore, we let the users choose one of the Emojis after they read an article.
+                </p>
+            </div>
+            <div class="expanded__media" >
+                <img src="./images/Quenews/Article_Modal.png" width="40%" style="box-shadow: 0px 0px 20px #c0c0c0; margin-left: -40%">
+                <img src="./images/Quenews/Article_Modal_2.png" width="40%" style="box-shadow: 0px 0px 20px #c0c0c0; margin-left: 3%">
+                <img src="./images/Quenews/Article_Modal_3.png" width="40%" style="box-shadow: 0px 0px 20px #c0c0c0; margin-left: 3%">
+            </div>
+        </div>
+    </div>
+</div>
+<div class="expanded landing__section" style="background-color: #ffffff">
+    <div class="container">
+        <div class="expanded__inner">
+
+            <div class="expanded__content">
+                <h1 class="expanded__title" >Search</h1>
+
+                <h3 >Categories</h3>
+                <p>
+                    We noticed that many users tend to listen to the news from same category. Some of them are sports fans, while others
+                    want to know about different media's perspective about a politic issue. As a result, we designed a search bar and several
+                    categories for them to choose.
+                </p>
+            </div>
+            <div class="expanded__media">
+                <img src="./images/Quenews/Search_Mockup.png" width="70%" >
+            </div>
+        </div>
+    </div>
+</div>
+<div class="expanded landing__section">
+    <div class="container">
+        <div class="expanded__inner">
+
+            <div class="expanded__content">
+                <h1 class="expanded__title" >Profile</h1>
+
+                <h3 >A reward system</h3>
+                <p>
+                    In order to encourage commuters to get knowledge from the news, we designed a reward system. They can
+                    unlock different functions (e.g. customize the font and recommendation prefrences) with the more news
+                    they listen to.
+                </p>
+            </div>
+            <div class="expanded__media">
+                <img src="./images/Quenews/Profile_Mockup.png" width="70%" >
+            </div>
+        </div>
+    </div>
+</div>
 
 
 
 
 
-<div class="landing_middle">
+<div class="landing_middle" style="background-color: white">
     <h1 class="middle_title">Wanna learn more about our design process?</h1>
     <a target="_blank" class="resume button button__primary" style="letter-spacing: 1px">Learn more</a><br>
 
